--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,5 @@
 <ul>
   <li><%=link_to 'home', welcome_home_path%></li>
   <li><%=link_to 'about', welcome_about_path%></li>
-  <li><%=link_to 'index', welcome_index_path%></li>
+  <li><%=link_to 'index', welcome_path%></li>
 </ul>
